--- a/Soporte/SoporteWeb/Views/Home/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/Index.cshtml
@@ -50,9 +50,10 @@
 <div class="jumbotron">
     <span class="text-center"> <h1> Fortalece y crece tu negocio </h1> </span>
 
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <div class="alert alert-info" role="alert">
+        A simple info alert—check it out!
+    </div>
 
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="card-deck">
