--- a/Soporte/SoporteWeb/Views/Home/About.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Servicios";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<br />
+
+<span class="text-center"> <h1>Tecnologia</h1> </span>
+
+<img src="https://images.pexels.com/photos/160107/pexels-photo-160107.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" alt="Responsive image">
+
