--- a/Soporte/SoporteWeb/Views/Home/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/Index.cshtml
@@ -51,8 +51,25 @@
     <span class="text-center"> <h1> Fortalece y crece tu negocio </h1> </span>
 
     <div class="alert alert-info" role="alert">
-        A simple info alert—check it out!
+        <i class="fas fa-wrench fa-2x"></i>
+        Equipo integrado por profesionales idóneos que desempeñan sus tareas con talento y eficiencia.
     </div>
+
+    <div class="alert alert-secondary" role="alert">
+        <i class="fas fa-address-card fa-2x"></i>
+        Nuestro equipo de profesionales trabaja incansablemente para alcanzar la máxima calidad.
+    </div>
+
+    <div class="alert alert-success" role="alert">
+        <i class="fas fa-dollar-sign fa-2x"></i>
+        Nuestros precios se ajustan a la calidad sobresaliente de los servicios que ofrecemos.
+    </div>
+
+    <div class="alert alert-danger" role="alert">
+        <i class="fas fa-handshake fa-2x"></i>
+        Nuestro principal objetivo es la satisfacción del cliente, prometemos dedicación, respeto y presición.
+    </div>
+
 
 </div>
 
