--- a/Soporte/SoporteWeb/Views/Home/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/Index.cshtml
@@ -78,8 +78,10 @@
         <img src="~/IMGS/1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> <i class="fas fa-desktop"></i> Tecnologia</h5>
+             
             <p class="card-text">Sabemos lo importante que es para usted el área de tecnología de su empresa, por lo que nos aseguramos de tener a los mejores ingenieros altamente calificados para atender cualquiera de sus necesidades, en cualquier momento.</p>
-            <p class="card-text"><button type="button" class="btn btn-dark">Ver mas <i class="fas fa-arrow-right"></i></button></p>
+            <p class="card-text"><button type="button"  class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
+            
         </div>
     </div>
     <div class="card">
@@ -87,7 +89,7 @@
         <div class="card-body">
             <h5 class="card-title"> <i class="fas fa-coins"></i> Contabilidad</h5>
             <p class="card-text">Le brindamos una Asesoría Fiscal Contable adecuada y oportuna que le permite el manejo y control de las operaciones de su compañía a través de diferentes herramientas tecnológicas de vanguardia que cumplan con las legislaciones de hoy día y satisfagan las necesidades de su empresa.</p>
-            <p class="card-text"><button type="button" class="btn btn-dark">Ver mas <i class="fas fa-arrow-right"></i></button></p>
+            <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
         </div>
     </div>
     <div class="card">
@@ -95,7 +97,7 @@
         <div class="card-body">
             <h5 class="card-title"> <i class="far fa-clipboard"></i> Auditoria</h5>
             <p class="card-text">Nuestra práctica de Auditoría está integrada por profesionales altamente calificados, experimentados y líderes en su campo de acción. Estos recursos, combinados con nuestra estructura de conocimiento, actualización y liderazgo, nos permiten proporcionarles apoyo a nuestros clientes dónde y cuándo lo necesitan, en su propio país o en el extranjero.</p>
-            <p class="card-text"><button type="button" class="btn btn-dark">Ver mas <i class="fas fa-arrow-right"></i></button></p>
+            <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
         </div>
     </div>
 </div>
