--- a/Soporte/SoporteWeb/Views/Home/Contact.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/Contact.cshtml
@@ -1,17 +1,20 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contacto";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Nuestras formas de contacto son:<br />
+    Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.<br />
+    <abbr title="Telefono">T:</abbr>
+    +528774978747
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Correo de Soporte:</strong>   <a href="mailto:Support@example.com">Support@technical.net</a><br />
+    <strong>Correo para Dudas:</strong> <a href="mailto:Marketing@example.com">dudas@technical.net</a>
 </address>
+<div class="row">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6727.0743645187085!2d-117.04116161440747!3d32.538505826026594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9490694c377b9%3A0x75332eec59a5663e!2sHong%20Kong%20Gentlemen&#39;s%20Club!5e0!3m2!1ses!2smx!4v1606782005585!5m2!1ses!2smx" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
