--- a/Soporte/SoporteWeb/Views/Account/Register.cshtml
+++ b/Soporte/SoporteWeb/Views/Account/Register.cshtml
@@ -3,38 +3,52 @@
     ViewBag.Title = "Registrarse";
 }
 
-<h2>@ViewBag.Title.</h2>
+@*<h2>@ViewBag.Title.</h2>*@
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Cree una cuenta nueva.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card mt-4">
+            <div class="card-header bg-dark">
+                <h5 class="m-0 text-white text-center">Solicitud de Registro</h5>
+
+            </div>
+            <div class="card-body">
+                @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+            @Html.AntiForgeryToken()
+                            <h4 class="text-lg-center">Cree una cuenta nueva.</h4>
+                                            <hr />
+                                                            @Html.ValidationSummary("", new { @class = "text-danger" })
+                                                                            <div class="form-group">
+                                                                                @Html.LabelFor(m => m.Email, new { @class = "col-md-6 control-label" })
+                                                                                <div class="col-md-10">
+                                                                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                                                                </div>
+                                                                            </div>
+                                                                                            <div class="form-group">
+                                                                                                @Html.LabelFor(m => m.Password, new { @class = "col-md-6 control-label" })
+                                                                                                <div class="col-md-10">
+                                                                                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                                                                                </div>
+                                                                                            </div>
+                                                                                                            <div class="form-group">
+                                                                                                                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-6 control-label" })
+                                                                                                                <div class="col-md-10">
+                                                                                                                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                                                                                                                </div>
+                                                                                                            </div>
+                                                                                                                            <div class="form-group">
+                                                                                                                                <div class="col-md-offset-2 col-md-10">
+                                                                                                                                    <input type="submit" class="btn btn-dark" value="Registrarse" />
+                                                                                                                                </div>
+                                                                                                                            </div>}
+
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Registrarse" />
-        </div>
-    </div>
-}
+</div>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
