--- a/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
+++ b/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
                 <li class="nav-item">@Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Servicios", "About", "Home", null, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contacto", "Contact", "Home", null, new { @class = "nav-link" })</li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item">@Html.ActionLink("Tipos", "Index", "Tipoes", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Costos", "Index", "Costoes", null, new { @class = "nav-link" })</li>
+
+                }
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
