--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -6,40 +6,94 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
+@*
+        <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+
+*@
+<p class="mt-3 text-center">
+    <a href="@Url.Action("Create","Costoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Costo</a>
+
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Tipo.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tipo.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card">
 
-</table>
+            <div class=" card-header">
+                Lista de Costos
+            </div>
+
+            <div class="card-body">
+                <table class="table">
+                    <thead class="thead-dark">
+
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Tipo.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.DateTime)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Description)
+                            </th>
+                            <th></th>
+                        </tr>
+
+                    </thead>
+
+
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Tipo.Name)
+                            </td>
+                            <td>
+                                <a href="@Url.Action("Edit", "Costoes", new { id = item.Id })" title="Editar"><i class="far fa-edit text-warning"></i></a>
+                                <a href="@Url.Action("Details", "Costoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
+                                <a href="@Url.Action("Delete", "Costoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-trash text-danger"></i></a>
+                            </td>
+                        </tr>
+                    }
+
+                </table>
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+
+
+@*
+        <table class="table">
+
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tipo.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
+
+*@
