--- a/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
-<div>
-    <h4>Tipo</h4>
-    <hr />
+<div class="row justify-content-center">
+    
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
