--- a/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
@@ -6,29 +6,53 @@
 
 <h2>Tipo de Servicios</h2>
 
-<p class="mt-3">
+<p class="mt-3 text-center">
     <a href="@Url.Action("Create","Tipoes")" class="btn btn-sm bg-dark text-white" ><i class="fas fa-plus"></i>Tipo</a>
 
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            <a href="@Url.Action("Edit", "Tipoes", new { id = item.Id })" title="Editar"><i class="far fa-edit text-warning"></i></a>
-            <a href="@Url.Action("Details", "Tipoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
-            <a href="@Url.Action("Delete", "Tipoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-trash text-danger"></i></a>
-        </td>
-    </tr>
-}
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card">
 
-</table>
+            <div class=" card-header">
+                Lista de servicios
+            </div>
+
+            <div class="card-body">
+                <table class="table">
+                    <thead class="thead-dark">
+
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th></th>
+                        </tr>
+
+                    </thead>
+                    
+
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                <a href="@Url.Action("Edit", "Tipoes", new { id = item.Id })" title="Editar"><i class="far fa-edit text-warning"></i></a>
+                                <a href="@Url.Action("Details", "Tipoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
+                                <a href="@Url.Action("Delete", "Tipoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-trash text-danger"></i></a>
+                            </td>
+                        </tr>
+                    }
+
+                </table>
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
