--- a/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
+++ b/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Technical Support</p>
+            <p class="text-center">&copy; @DateTime.Now.Year - Technical Support</p>
         </footer>
     </div>
 
