--- a/Soporte/SoporteWeb/Views/Costoes/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Details.cshtml
@@ -4,37 +4,45 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div class="text-center mt-3">
+    <h2>Detalles</h2>
+</div>
 
-<div>
-    <h4>Costo</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Tipo.Name)
-        </dt>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card">
+            <h4>Costo</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Tipo.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tipo.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Tipo.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DateTime)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.DateTime)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DateTime)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.DateTime)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Description)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Description)
+                </dd>
 
-    </dl>
+            </dl>
+        </div>
+
+    </div>
+
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
