--- a/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewBag.Title = "Details";
 }
+<div class="text-center mt-3">
+    <h2>Detalles</h2>
+</div>
 
-<h2>Details</h2>
+<div class="text-center mt-2">
 
-<div>
-    <h4>Tipo</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -20,31 +20,47 @@
 
     </dl>
 </div>
-<div class="col-md-12">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Usuario</th>
-                <th>Descripción</th>
-                <th>Fecha</th>
-                <th>Tipo</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Costos)
-            {
-            <tr>
-                <th>@item.User</th>
-                <th>@item.Description</th>
-                <th>@item.DateTime</th>
-                <th>@Model.Name</th>
-            </tr>
-            }
-        </tbody>
-    </table>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card">
+
+
+            <div class="card-header">
+
+                Costos
+            </div>
+            <div class="card-body">
+                <table class="table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Usuario</th>
+                            <th>Descripción</th>
+                            <th>Fecha</th>
+                            <th>Tipo</th>
+                            <th>Acciones</th> @*Acciones?*@
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Costos)
+                        {
+                            <tr>
+                                <th>@item.User</th>
+                                <th>@item.Description</th>
+                                <th>@item.DateTime</th>
+                                <th>@Model.Name</th>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+
