--- a/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
@@ -4,7 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Tipo de Servicios</h2>
+<div class="text-center mt-3">
+    <h2>Tipo de Servicios</h2>
+</div>
+
 
 <p class="mt-3 text-center">
     <a href="@Url.Action("Create","Tipoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Tipo</a>
@@ -40,9 +43,12 @@
                                 @Html.DisplayFor(modelItem => item.Name)
                             </td>
                             <td>
-                                <a href="@Url.Action("Edit", "Tipoes", new { id = item.Id })" title="Editar"><i class="far fa-edit text-warning"></i></a>
+                                <a href="@Url.Action("Edit", "Tipoes", new { id = item.Id })" title="Editar"><i class="fas fa-file-alt text-warning"></i></a>
+
                                 <a href="@Url.Action("Details", "Tipoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
-                                <a href="@Url.Action("Delete", "Tipoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-trash text-danger"></i></a>
+
+                                <a href="@Url.Action("Delete", "Tipoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-times-circle text-danger"></i></a>
+                                
                             </td>
                         </tr>
                     }
