--- a/Soporte/SoporteWeb/Views/Costoes/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Details.cshtml
@@ -11,7 +11,7 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card">
-            <h4>Costo</h4>
+            <h4>Lista de Detalles</h4>
             <hr />
             <dl class="dl-horizontal">
                 <dt>
@@ -44,7 +44,7 @@
     </div>
 
 </div>
-<p>
+<p class="text-center">
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
