--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center mt-3">
-    <h2>Costos</h2>
+    <h2>Trabajos</h2>
 </div>
 
 
@@ -16,7 +16,7 @@
     </p>
 *@
 <p class="mt-3 text-center">
-    <a href="@Url.Action("Create","Costoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Costo</a>
+    <a href="@Url.Action("Create","Costoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Agregar</a>
 
 </p>
 
@@ -25,7 +25,7 @@
         <div class="card">
 
             <div class=" card-header">
-                Lista de Costos
+                Lista de Trabajos
             </div>
 
             <div class="card-body">
