--- a/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
@@ -58,7 +58,7 @@
     </div>
 
 </div>
-<p>
+<p class="text-center">
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
