--- a/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div class="text-center mt-3">
-    <h2>Tipo de Servicios</h2>
+    <h2>Tipos de Servicios</h2>
 </div>
 
 
 <p class="mt-3 text-center">
-    <a href="@Url.Action("Create","Tipoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Tipo</a>
+    <a href="@Url.Action("Create","Tipoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Agregar</a>
 
 </p>
 
