--- a/Soporte/SoporteWeb/Views/Costoes/Delete.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Delete.cshtml
@@ -46,9 +46,9 @@
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color">
+                    <div class="text-center">
                         <input type="submit" value="Eliminar" class="btn btn-dark" /> |
-                        @Html.ActionLink("Regresar a la lista", "Index")
+                        @Html.ActionLink("Regresar a la lista", "Index","Costoes", new { @class = "btn btn-dark" })
                     </div>
                 }
             </div>
