--- a/Soporte/SoporteWeb/Views/Costoes/Create.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Create.cshtml
@@ -46,14 +46,13 @@
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Crear" class="btn btn-dark" />
+                            @Html.ActionLink("Regresar a la lista", "Index", "Costoes", new { @class = "btn btn-dark" })
                         </div>
                     </div>
                 </div>
             }
 
-            <div>
-                @Html.ActionLink("Regresar a la lista", "Index")
-            </div>
+          
         </div>
 
     </div>
