--- a/Soporte/SoporteWeb/Views/Costoes/Edit.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Edit.cshtml
@@ -45,17 +45,16 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group text-center">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Guardar" class="btn btn-dark" />
+                            @Html.ActionLink("Regresar a la lista", "Index", "Costoes", new { @class = "btn btn-dark" })
                         </div>
                     </div>
                 </div>
             }
 
-            <div>
-                @Html.ActionLink("Regresar a la lista", "Index")
-            </div>
+           
         </div>
 
     </div>
