--- a/Soporte/SoporteWeb/Views/Tipoes/Create.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Create.cshtml
@@ -26,16 +26,16 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group text-center">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Crear" class="btn btn-dark" />
+                            @Html.ActionLink("Regresar a la lista", "Index", "Tipoes", new { @class = "btn btn-dark" })
                         </div>
                     </div>
                 </div>
             }
 
-            <div>
-                @Html.ActionLink("Regresar a la lista", "Index")
+            
             </div>
         </div>
 
