--- a/Soporte/SoporteWeb/Views/Home/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@{ ViewBag.Title = "Inicio"; }
 @* Galeria de imagenes *@
 @* Galeria de imagenes *@
 <div>
@@ -78,10 +76,10 @@
         <img src="~/IMGS/1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> <i class="fas fa-desktop"></i> Tecnologia</h5>
-             
+
             <p class="card-text">Sabemos lo importante que es para usted el área de tecnología de su empresa, por lo que nos aseguramos de tener a los mejores ingenieros altamente calificados para atender cualquiera de sus necesidades, en cualquier momento.</p>
-            <p class="card-text"><button type="button"  class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
-            
+            <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
+
         </div>
     </div>
     <div class="card">
@@ -101,3 +99,47 @@
         </div>
     </div>
 </div>
+<br />
+<br />
+<h1 class="text-center">Contacto</h1>
+<div class="row">
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6727.0743645187085!2d-117.04116161440747!3d32.538505826026594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9490694c377b9%3A0x75332eec59a5663e!2sHong%20Kong%20Gentlemen&#39;s%20Club!5e0!3m2!1ses!2smx!4v1606782005585!5m2!1ses!2smx" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
+
+<footer class="ftco-footer ftco-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Technical Support</h2>
+                    <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+                   
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Servicios</h2>
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                        <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                        <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                        <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                            <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                            <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
