--- a/Soporte/SoporteWeb/Content/Site.css
+++ b/Soporte/SoporteWeb/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding: 0px;
     margin: 0;
-    background-color: #B2B1B1;
+    background-color: #000000;
 }
 .container {
     margin 0px;
