--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -4,75 +4,143 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<div class="text-center mt-3">
-    <h2>Trabajos</h2>
+<div class="Muerdes">
+    <br />
+    <br />
+    <br />
 </div>
 
+<div class="Masticas">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="text-center mt-3">
+        <h2><p class="text-black font-weight-bolder">Trabajos</p></h2>
+    </div>
 
-@*
-        <p>
-        @Html.ActionLink("Create New", "Create")
+
+    @*
+            <p>
+            @Html.ActionLink("Create New", "Create")
+        </p>
+    *@
+    <p class="mt-3 text-center">
+        <a href="@Url.Action("Create","Costoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Agregar</a>
+
     </p>
-*@
-<p class="mt-3 text-center">
-    <a href="@Url.Action("Create","Costoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Agregar</a>
 
-</p>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
+                <div class=" card-header">
+                    Lista de Trabajos
+                </div>
 
-            <div class=" card-header">
-                Lista de Trabajos
-            </div>
+                <div class="card-body">
+                    <table class="table">
+                        <thead class="thead-dark">
 
-            <div class="card-body">
-                <table class="table">
-                    <thead class="thead-dark">
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Tipo.Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.DateTime)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Description)
+                                </th>
+                                <th></th>
+                            </tr>
 
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Tipo.Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.DateTime)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Description)
-                            </th>
-                            <th></th>
-                        </tr>
-
-                    </thead>
+                        </thead>
 
 
-                    @foreach (var item in Model)
-                    {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Tipo.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DateTime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        <a href="@Url.Action("Edit", "Costoes", new { id = item.Id })" title="Editar"><i class="fas fa-file-alt text-warning"></i></a>
-                        <a href="@Url.Action("Details", "Costoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
-                        <a href="@Url.Action("Delete", "Costoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-times-circle text-danger"></i></a>
-                    </td>
-                </tr>
-                    }
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Tipo.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DateTime)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Description)
+                                </td>
+                                <td>
+                                    <a href="@Url.Action("Edit", "Costoes", new { id = item.Id })" title="Editar"><i class="fas fa-file-alt text-warning"></i></a>
+                                    <a href="@Url.Action("Details", "Costoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
+                                    <a href="@Url.Action("Delete", "Costoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-times-circle text-danger"></i></a>
+                                </td>
+                            </tr>
+                        }
 
-                </table>
+                    </table>
+
+                </div>
 
             </div>
 
         </div>
-
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    
+
 </div>
+
+<footer class="ftco-footer ftco-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Technical Support</h2>
+                    <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Servicios</h2>
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                        <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                        <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                        <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                            <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                            <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
