--- a/Soporte/SoporteWeb/Views/Home/Contact.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/Contact.cshtml
@@ -1,20 +1,51 @@
 ﻿@{
     ViewBag.Title = "Contacto";
 }
+<div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/IMGS/1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Tecnologia</h5>
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="~/IMGS/2.jpg" class="d-block w-100 " alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Contabilidad</h5>
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="~/IMGS/3.jpg" class="d-block w-100 " alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Auditoria</h5>
+
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    @* ---------------------------------------------------------------------------------------------------------- *@
+</div>
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    Nuestras formas de contacto son:<br />
-    Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.<br />
-    <abbr title="Telefono">T:</abbr>
-    +528774978747
-</address>
-
-<address>
-    <strong>Correo de Soporte:</strong>   <a href="mailto:Support@example.com">Support@technical.net</a><br />
-    <strong>Correo para Dudas:</strong> <a href="mailto:Marketing@example.com">dudas@technical.net</a>
-</address>
 <div class="row">
+
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6727.0743645187085!2d-117.04116161440747!3d32.538505826026594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9490694c377b9%3A0x75332eec59a5663e!2sHong%20Kong%20Gentlemen&#39;s%20Club!5e0!3m2!1ses!2smx!4v1606782005585!5m2!1ses!2smx" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
