--- a/Soporte/SoporteWeb/Views/Tipoes/Delete.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Delete.cshtml
@@ -3,41 +3,105 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<div class="text-center mt-3">
-    <h2>Eliminar</h2>
+<div class="Muerdes">
+    <br />
+    <br />
+    <br />
 </div>
+<div class="Comes">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="text-center mt-3">
+        <h2><p class="text-white font-weight-bolder">Eliminar</p></h2>
+    </div>
 
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-            <h3>¿Seguro que deseas eliminarlo?</h3>
-            <div>
-                <h4>Tipo</h4>
-                <hr />
-                <dl class="dl-horizontal">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </dt>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <h3>¿Seguro que deseas eliminarlo?</h3>
+                <div>
+                    <h4>Tipo</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Name)
+                        </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Name)
-                    </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.Name)
+                        </dd>
 
-                </dl>
+                    </dl>
 
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color text-center">
-                        <input type="submit" value="Eliminar" class="btn btn-dark" /> |
-                        @Html.ActionLink("Regresar a la lista", "Index","Tipoes", new { @class = "btn btn-dark" })
+                        <div class="form-actions no-color text-center">
+                            <input type="submit" value="Eliminar" class="btn btn-dark" /> |
+                            @Html.ActionLink("Regresar a la lista", "Index", "Tipoes", new { @class = "btn btn-dark" })
+                        </div>
+                    }
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+</div>
+<footer class="ftco-footer ftco-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Technical Support</h2>
+                    <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Servicios</h2>
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                        <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                        <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                        <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                            <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                            <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                        </ul>
                     </div>
-                }
+                </div>
             </div>
         </div>
-
     </div>
-</div>
+</footer>
