--- a/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Details.cshtml
@@ -3,65 +3,130 @@
 @{
     ViewBag.Title = "Details";
 }
-<div class="text-center mt-3">
-    <h2>Detalles</h2>
+<div class="Muerdes">
+
+    <br />
+    <br />
+    <br />
 </div>
-
-<div class="text-center mt-2">
-
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-    </dl>
-</div>
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-
-
-            <div class="card-header">
-
-                Costos
-            </div>
-            <div class="card-body">
-                <table class="table">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Usuario</th>
-                            <th>Descripción</th>
-                            <th>Fecha</th>
-                            <th>Tipo</th>
-                            <th>Acciones</th> @*Acciones?*@
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.Costos)
-                        {
-                            <tr>
-                                <th>@item.User</th>
-                                <th>@item.Description</th>
-                                <th>@item.DateTime</th>
-                                <th>@Model.Name</th>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-                <p class="text-center">
-                    @Html.ActionLink("Editar", "Edit", "Tipoes", new { id = Model.Id }, new { @class = "btn btn-dark" }) |
-                    @Html.ActionLink("Regresar a la lista", "Index", "Tipoes", new { @class = "btn btn-dark" })
-                </p>
-            </div>
-        </div>
+<div class="Comes">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="text-center mt-3">
+        <h2><p class="text-white font-weight-bolder">Detalles</p></h2>
 
     </div>
 
+    <div class="text-center mt-2">
+
+        <dl class="dl-horizontal">
+            <dt class="text-white font-weight-bolder">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+
+            <dd class="text-white font-weight-bolder">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+
+        </dl>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+
+
+                <div class="card-header">
+
+                    Costos
+                </div>
+                <div class="card-body">
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Usuario</th>
+                                <th>Descripción</th>
+                                <th>Fecha</th>
+                                <th>Tipo</th>
+                                <th>Acciones</th> @*Acciones?*@
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Costos)
+                            {
+                                <tr>
+                                    <th>@item.User</th>
+                                    <th>@item.Description</th>
+                                    <th>@item.DateTime</th>
+                                    <th>@Model.Name</th>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    <p class="text-center">
+                        @Html.ActionLink("Editar", "Edit", "Tipoes", new { id = Model.Id }, new { @class = "btn btn-dark" }) |
+                        @Html.ActionLink("Regresar a la lista", "Index", "Tipoes", new { @class = "btn btn-dark" })
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 </div>
+<footer class="ftco-footer ftco-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Technical Support</h2>
+                    <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
 
-
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Servicios</h2>
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                        <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                        <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                        <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                            <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                            <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
