--- a/Soporte/SoporteWeb/Views/Tipoes/Edit.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Edit.cshtml
@@ -3,47 +3,112 @@
 @{
     ViewBag.Title = "Edit";
 }
-<div class="text-center mt-3">
-    <h2>Editar</h2>
+<div class="Muerdes">
+    <br />
+    <br />
+    <br />
+
 </div>
+<div class="Comes">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="text-center mt-3">
+        <h2><p class="text-white font-weight-bolder">Editar</p></h2>
+    </div>
 
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-                <div class="form-horizontal">
-                    <h4>Tipo</h4>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.Id)
+                    <div class="form-horizontal">
+                        <h4>Tipo</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.Id)
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group text-center">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Guardar" class="btn btn-dark" />
+                                @Html.ActionLink("Regresar a la lista", "Index", "Tipoes", new { @class = "btn btn-dark" })
+                            </div>
                         </div>
                     </div>
+                }
 
-                    <div class="form-group text-center">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Guardar" class="btn btn-dark" />
-                            @Html.ActionLink("Regresar a la lista", "Index","Tipoes", new { @class = "btn btn-dark" })
-                        </div>
+
+            </div>
+
+        </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+</div>
+<footer class="ftco-footer ftco-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Technical Support</h2>
+                    <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Servicios</h2>
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                        <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                        <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                        <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                            <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                            <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                        </ul>
                     </div>
                 </div>
-            }
-
-            
+            </div>
         </div>
-
     </div>
-</div>
-
+</footer>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
