--- a/Soporte/SoporteWeb/Views/Costoes/Delete.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Delete.cshtml
@@ -8,57 +8,83 @@
     <br />
     <br />
 </div>
-<div class="text-center mt-3">
-    <h2>Eliminar</h2>
-</div>
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-            <h3>¿Seguro que deseas eliminarlo?</h3>
-            <div>
-                <h4>Costo</h4>
-                <hr />
-                <dl class="dl-horizontal">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Tipo.Name)
-                    </dt>
+<div class="Masticas">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Tipo.Name)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.DateTime)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.DateTime)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Description)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Description)
-                    </dd>
-
-                </dl>
-
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
-
-                    <div class="text-center">
-                        <input type="submit" value="Eliminar" class="btn btn-dark" /> |
-                        @Html.ActionLink("Regresar a la lista", "Index","Costoes", new { @class = "btn btn-dark" })
-                    </div>
-                }
-            </div>
-        </div>
-
+    <div class="text-center mt-3">
+        <h2><p class="text-black font-weight-bolder">Eliminar</p></h2>
     </div>
+
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <h3>¿Seguro que deseas eliminarlo?</h3>
+                <div>
+                    <h4>Costo</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Tipo.Name)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Tipo.Name)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.DateTime)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.DateTime)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Description)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Description)
+                        </dd>
+
+                    </dl>
+
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+
+                        <div class="text-center">
+                            <input type="submit" value="Eliminar" class="btn btn-dark" /> |
+                            @Html.ActionLink("Regresar a la lista", "Index", "Costoes", new { @class = "btn btn-dark" })
+                        </div>
+                    }
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 </div>
 
 
