--- a/Soporte/SoporteWeb/Views/Costoes/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Details.cshtml
@@ -8,49 +8,74 @@
     <br />
     <br />
 </div>
-<div class="text-center mt-3">
-    <h2>Detalles</h2>
-</div>
+<div class="Masticas">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-            <h4>Lista de Detalles</h4>
-            <hr />
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.Tipo.Name)
-                </dt>
+    <div class="text-center mt-3">
+        <h2><p class="text-black font-weight-bolder">Detalles</p></h2>
+    </div>
 
-                <dd>
-                    @Html.DisplayFor(model => model.Tipo.Name)
-                </dd>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <h4>Lista de Detalles</h4>
+                <hr />
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Tipo.Name)
+                    </dt>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.DateTime)
-                </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Tipo.Name)
+                    </dd>
 
-                <dd>
-                    @Html.DisplayFor(model => model.DateTime)
-                </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DateTime)
+                    </dt>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Description)
-                </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DateTime)
+                    </dd>
 
-                <dd>
-                    @Html.DisplayFor(model => model.Description)
-                </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Description)
+                    </dt>
 
-            </dl>
-            <div class="text-center">
-                @Html.ActionLink("Editar", "Edit", "Costoes", new { id = Model.Id }, new { @class = "btn btn-dark" }) |
-                @Html.ActionLink("Regresar", "Index", "Costoes", new { @class = "btn btn-dark" })
+                    <dd>
+                        @Html.DisplayFor(model => model.Description)
+                    </dd>
+
+                </dl>
+                <div class="text-center">
+                    @Html.ActionLink("Editar", "Edit", "Costoes", new { id = Model.Id }, new { @class = "btn btn-dark" }) |
+                    @Html.ActionLink("Regresar", "Index", "Costoes", new { @class = "btn btn-dark" })
+                </div>
             </div>
+
         </div>
 
     </div>
-
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 </div>
 
 
