--- a/Soporte/SoporteWeb/Views/Manage/ChangePassword.cshtml
+++ b/Soporte/SoporteWeb/Views/Manage/ChangePassword.cshtml
@@ -3,38 +3,107 @@
     ViewBag.Title = "Cambiar contraseña";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="chupas">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card mt-4">
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Formulario para cambiar contraseña</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                <div class="card-header bg-dark">
+                    <h5 class="m-0 text-white text-center">@ViewBag.Title.</h5>
+
+                </div>
+
+                
+
+                @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4>Formulario para cambiar contraseña</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Cambiar contraseña" class="btn btn-dark" />
+                        </div>
+                    </div>
+                }
+            </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Cambiar contraseña" class="btn btn-default" />
-        </div>
-    </div>
-}
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+
+            </div>
+
+            <footer class="ftco-footer ftco-section">
+                <div class="container">
+                    <div class="row mb-5">
+                        <div class="col-md">
+                            <div class="ftco-footer-widget mb-4">
+                                <h2 class="ftco-heading-2">Technical Support</h2>
+                                <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+
+                            </div>
+                        </div>
+                        <div class="col-md">
+                            <div class="ftco-footer-widget mb-4">
+                                <h2 class="ftco-heading-2">Servicios</h2>
+                                <ul class="list-unstyled">
+                                    <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                                    <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                                    <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                                    <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md">
+                            <div class="ftco-footer-widget mb-4">
+                                <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                                <div class="block-23 mb-3">
+                                    <ul>
+                                        <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                                        <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                                        <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            @section Scripts {
+                @Scripts.Render("~/bundles/jqueryval")
+            }
