--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -22,15 +22,13 @@
     </div>
 
 
-    @*
-            <p>
-            @Html.ActionLink("Create New", "Create")
-        </p>
-    *@
-    <p class="mt-3 text-center">
+<p class="mt-3 text-center">
+    @if (User.IsInRole("Administrator"))
+    {
         <a href="@Url.Action("Create","Costoes")" class="btn btn-sm bg-dark text-white"><i class="fas fa-plus"></i>Agregar</a>
+    }
 
-    </p>
+</p>
 
     <div class="row justify-content-center">
         <div class="col-md-6">
